--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/unnamed.png" />
+  <link rel="icon" type="image/svg+xml" href="/logo.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Landing Page Profissional - Desenvolvedor Front-end React</title>
   <meta name="description"
