--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <meta name="author" content="Marcus - Desenvolvedor Front-End">
   <meta name="robots" content="index, follow">
 
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
-
-  <title>Vite + React</title>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet"> 
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6723609141528925"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
