--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     content="landing page, desenvolvedor front end, dev front end, programador front end, programador React, dev React, site com React, front end React, site moderno">
   <meta name="author" content="Marcus - Desenvolvedor Front-End">
   <meta name="robots" content="index, follow">
+  <meta name="google-adsense-account" content="ca-pub-6723609141528925">
 
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet"> 
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6723609141528925"
